<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="safety_net">Safety Net test</string>
    <string name="safetyNet_no_response">Cannot check SafetyNet, no Internet?</string>
    <string name="safetyNet_check_success">Test successful, Result:</string>
    <string name="safetyNet_fail">Failed</string>
    <string name="safetyNet_pass">Passed</string>
    <string name="safetyNet_network_loss">Network connection loss</string>
    <string name="safetyNet_service_disconnected">Service has been killed</string>
    <string name="safetyNet_res_invalid">The response is invalid</string>
    <string name="safetyNet_untested">Untested, Click to test</string>
    <string name="safetyNet_testing">Testing&#8230; It may take a few seconds.</string>
    <string name="fail_reason">(reason of the fail)</string>
    <string name="props_status_good">OK for Safety Net</string>
    <string name="su_not_cm">Current SU version or state is not supported.\nSome app functions only works with CM-SU</string>
    <string name="reboot_support">Reboot support</string>
    <string name="reboot_support_missing">The reboot support is needed to avoid losing SU after a reboot with SU deactivated. In Android Nougat the app can add that support, in Marshmallow or older it is needed to flash a file, click on DOWNLOAD FOLDER below to download the latest version and flash it via recovery</string>
    <string name="missing">Missing or out of date! Click here to understand</string>
    <string name="download_folder">Download Folder</string>
    <string name="checks_log">Generate a .zip with all logs that can help to understand fails, bugs, etc&#8230;</string>
    <string name="log">Log</string>
    <string name="generating_log">Generating a Log&#8230;</string>
    <string name="generating_log_move">Log file saved at:\n\n%s</string>
    <string name="cant_generating">Can\'t generate a log, missing write permission to storage</string>
    <string name="update">Update</string>
    <string name="update_title">Update Status</string>
    <string name="update_summary_out">iSu is Outdated\nLatest app version is %s, but you are running version</string>
    <string name="update_summary_up">iSu is up-to-date</string>
    <string name="update_summary_fail">Could not verify, click to try again</string>
    <string name="update_link">\n\nClick here to open iSu download page</string>
    <string name="update_checking">Checking&#8230; It may take a few seconds.</string>
    <string name="generate_log">Generate a log</string>
    <string name="help">Help</string>
    <string name="hide">Hide</string>
    <string name="hide_title">Hide iSu</string>
    <string name="hide_generating">Installing masked iSu (%d&#176; try), this will take a moment&#8230;</string>
    <string name="hide_summary">Some applications can identify that iSu is installed and prevent use or access of they content, this function can prevent others applications from see iSu, by creating a masked version of the app that is harder to be detected by others applications</string>
    <string name="hide_isu">\n\nHide iSu?</string>
    <string name="masked">Masked</string>
    <string name="hide_fail">Hide process fail tree times, contact the developer with logs</string>
    <string name="hide_success">Hide process end with success, new iSu package id %s\n\niSu and Masked iSu don\'t share the same data be aware is need to reconfigure the masked app (setting, per app monitor etc)</string>
    <string name="is_hide">iSu is in \u0022Masked Mod\u0022, if you choose to revert this state click here</string>
    <string name="unhide_title">Unhide iSu</string>
    <string name="unhide_summary">UnHide iSu? and uninstall This masked version?</string>
    <string name="not_hide">Running as Masked iSu but original iSu is not hidden, click here to fix it</string>
    <string name="need_update">Original iSu version is updated in relation to masked iSu, click here to update from original iSu</string>
    <string name="need_update_title">Update Masked</string>
    <string name="need_update_summary">Click OK to update Masked from original, if after the update process the app is not updated please try again.\nUpdate?</string>
    <string name="update_use_hide">Use Unhide iSu to update the app</string>
    <string name="isu_not_instaled">iSu not installed can\'t revert to original</string>
    <string name="su_switch">Change SU state</string>
    <string name="su_state">SU state</string>
    <string name="selinux_state">SELinux state</string>
    <string name="adb_state_root_state">Change ADB ROOT service state</string>
    <string name="adb_state_root">ADB ROOT service</string>
    <string name="running">Running</string>
    <string name="not_running">Not running or ADB disable</string>
    <string name="device_not_root">Root access not available</string>
    <string name="activated">Activated</string>
    <string name="deactivated">Deactivated</string>
    <string name="su_version">Su version</string>
    <string name="selinux_switch">Change SELinux state</string>
    <string name="fake_selinux_switch">Fake Enforce SELinux</string>
    <string name="fake_selinux_switch_summary">For devices that have problem with SELinux enforced (boot up in permissive), enable this to fake enforce SELinux, this can only be reverted by disabling this option and rebooting</string>
    <string name="anddebug_switch">Android debugging</string>
    <string name="anddebug_change">Change Android debugging state</string>
    <string name="check_settings">Check SETTINGS for extra controls actions base on SU state</string>
    <string name="tasker_summary">iSu controls can be controlled via Tasker\nClick here to see how</string>
    <string name="tasker_help">Use the below intents as an \u0022Action\u0022 in a new task (SystemSend intent *):\n\n%s \n*Only thing to add or change on the new task is the \u0022Action\u0022 all the other options can be the default of tasker, in doubt check xda support forum link in about</string>
    <string name="tasker_help_extra_description">Descriptions:\n\n</string>
    <string name="tasker_help_extra_state">Set to \u0022%s\u0022 state\n</string>
    <string name="tasker_help_inv">Always inverses the current state\n</string>
    <string name="notification_title">SU is deactivated, activate SU?</string>
    <string name="notification_switch">Show a notification when SU is deactivated</string>
    <string name="toast_notification_switch">Show toast notifications when changing SU</string>
    <string name="yes">Yes</string>
    <string name="dismiss">Dismiss</string>
    <string name="notifications">Notifications</string>
    <string name="activate_anddebug">Activated Android debugging</string>
    <string name="deactivate_anddebug">Deactivated Android debugging</string>
    <string name="set_per_app">App monitor</string>
    <string name="per_app_title_isu">Select the apps that will deactivate SU when started</string>
    <string name="per_app_title_su">Select the apps that will activate SU when started</string>
    <string name="accessibility_service_desc">A service to monitor when a foreground app starts and then activate or deactivate SU.\nBe aware some apps may be too fast and the service activates or deactivates SU too late, in this case it is recommended to use a manual change, via the app\'s widget or tile.</string>
    <string name="auto_restart_su">Automatic Re-Activate SU</string>
    <string name="auto_restart_su_summary">If this switch is on, SU will be automatically actived when leaving the app that deactivated SU</string>
    <string name="auto_restart_isu">Automatic Re-Deactivate SU</string>
    <string name="auto_restart_isu_summary">If this switch is on, SU will be automatically deactivated when leaving the app that activated SU</string>
    <string name="deactivate_list">Deactivate list</string>
    <string name="activate_list">Activate list</string>
    <string name="dontcare_list">Don\'t Care list</string>
    <string name="per_app_active">Activate SU</string>
    <string name="per_app_deactive">Deactivate SU</string>
    <string name="per_app_dontcare">Don\'t Care List</string>
    <string name="per_app_dontcare_summary">Select the apps that will have no effect to App monitor, when it start.\nHow this works:\nSelect apps that are nor Root nor UnRoot apps, and are used by or are displayed above a Root or UnRoot app, example Keyboard or function overlay apps like volume apps</string>
    <string name="monitor_warning">App monitor accessibility service is disabled\nTo use this service, it is needed to enable it in \u0022system settings accessibility\u0022 \nClick here to open accessibility</string>
    <string name="in_prop_summary">Click on the below to change a individual prop, Props with * need a reboot after change to take full effect, Props with (sn) are known to cause safety net fail</string>
    <string name="props_ok">Known safe value</string>
    <string name="props_nok">Known unsafe value</string>
    <string name="props_unknown">Unknown value</string>
    <string name="props_unknown_summary">Props with unknown are props that your device doesn\'t have, this doesn\'t mean that there\'s a problem</string>
    <string name="force_all_summary">Click on the below to force all known Props to the chosen value:</string>
    <string name="know_prop_list">Known props list</string>
    <string name="special_props">Special Props</string>
    <string name="special_props_summary">\nIf after a change of a special prop and one reboot the new value is reverted to original ROM value you need request the developer of the ROM to fix it</string>
    <string name="ro_props">Read Only editor</string>
    <string name="props_any_summary">List all ro.props and select some to edit</string>
    <string name="props_any_list">List</string>
    <string name="props_any_list_summary">List yours changes to ro.props</string>
    <string name="know_props">Known Props</string>
    <string name="props">Props</string>
    <string name="selinux">SELinux</string>
    <string name="selinux_settings">Extra SELinux controls</string>
    <string name="selinux_settings_summary">Control the state of SELinux when SU is changed</string>
    <string name="selinux_su_on">SELinux state when SU is Activated</string>
    <string name="selinux_su_off">SELinux state SU Deactivated</string>
    <string name="anddebug_settings">Extra Android Debug controls</string>
    <string name="anddebug_settings_summary">Control the state of Android Debug when SU is changed</string>
    <string name="anddebug_su_on">Android Debug state when SU is Activated</string>
    <string name="anddebug_su_off">Android Debug state when SU is Deactivated</string>
    <string name="props_apply_boot">Apply changes to props on boot</string>
    <string name="tasker" translatable="false" >Tasker</string>
    <string name="robuildtags" translatable="false" >ro.build.tags *</string>
    <string name="rodebuggable" translatable="false" >ro.debuggable</string>
    <string name="robootbl_state" translatable="false" >ro.boot.bl_state</string>
    <string name="robootflashlocked" translatable="false" >ro.boot.flash.locked (sn)</string>
    <string name="robootverifiedbootstate" translatable="false" >ro.boot.verifiedbootstate (sn)</string>
    <string name="rosecure" translatable="false" >ro.secure (sn)</string>
    <string name="robootveritymode" translatable="false" >ro.boot.veritymode</string>
    <string name="robuildtype" translatable="false" >ro.build.type</string>
    <string name="robuildselinux" translatable="false" >ro.build.selinux</string>
    <string name="robootselinux" translatable="false" >ro.boot.selinux</string>
    <string name="robuildfingerprint" translatable="false" >ro.build.fingerprint</string>
    <string name="robootwarranty_bit" translatable="false" >ro.boot.warranty_bit</string>
    <string name="isu_icon" translatable="false" >iSu icon</string>
</resources>