<?xml version="1.0" encoding="utf-8"?>
<!--/*
 * Copyright (C) 2016-2017 Felipe de Leon <fglfgl27@gmail.com>
 *
 * This file is part of iSu.
 *
 * iSu is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * iSu is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with iSu.  If not, see <http://www.gnu.org/licenses/>.
 *
 */-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:key="monitor_pref_screen">
    <PreferenceCategory
        android:key="monitor_su"
        android:title="@string/set_per_app">
        <Preference
            android:key="per_app_summary"
            android:summary="@string/accessibility_service_desc"
            android:persistent="false" />
        <Preference
            android:key="per_app_view"
            android:summary="@string/su_not_cm"
            android:icon="@drawable/warning"
            android:persistent="false" />
        <Preference
            android:key="per_app_warning"
            android:summary="@string/monitor_warning"
            android:icon="@drawable/warning"
            android:persistent="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="per_app_dontcare_pref"
        android:title="@string/per_app_dontcare">
        <Preference
            android:key="per_app_dontcare"
            android:title="@string/dontcare_list"
            android:summary="@string/per_app_dontcare_summary"
            android:persistent="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="deactivate_su"
        android:title="@string/per_app_deactive">
        <Preference
            android:key="per_app_deactive"
            android:title="@string/deactivate_list"
            android:summary="@string/per_app_title_isu"
            android:persistent="false" />
        <SwitchPreference
            android:key="auto_restart_su"
            android:defaultValue="true"
            android:title="@string/auto_restart_su"
            android:summary="@string/auto_restart_su_summary" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="activate_su"
        android:title="@string/per_app_active">
        <Preference
            android:key="per_app_active"
            android:title="@string/activate_list"
            android:summary="@string/per_app_title_su"
            android:persistent="false" />
        <SwitchPreference
            android:key="auto_restart_isu"
            android:defaultValue="false"
            android:title="@string/auto_restart_isu"
            android:summary="@string/auto_restart_isu_summary" />
</PreferenceCategory>
</PreferenceScreen>
