<?xml version="1.0" encoding="utf-8"?>
<!--/*
 * Copyright (C) 2016-2017 Felipe de Leon <fglfgl27@gmail.com>
 *
 * This file is part of iSu.
 *
 * iSu is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * iSu is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with iSu.  If not, see <http://www.gnu.org/licenses/>.
 *
 */-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:key="controls_pref_screen">
    <PreferenceCategory
        android:key="controls_su"
        android:title="SU">
        <Preference
            android:key="controls_view"
            android:summary="@string/su_not_cm"
            android:icon="@drawable/warning"
            android:persistent="false" />
        <SwitchPreference
            android:key="su_switch"
            android:defaultValue="false"
            android:title="@string/su_switch" />
        <Preference
            android:key="controls_tip_settings"
            android:summary="@string/check_settings"
            android:persistent="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="selinux"
        android:title="@string/selinux">
        <SwitchPreference
            android:key="selinux_switch"
            android:title="@string/selinux_switch" />
        <SwitchPreference
            android:key="fake_selinux_switch"
            android:title="@string/fake_selinux_switch"
            android:summary="@string/fake_selinux_switch_summary" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="anddebug_switchs"
        android:title="@string/anddebug_switch">
        <SwitchPreference
            android:key="android_debug"
            android:defaultValue="false"
            android:title="@string/anddebug_change" />
        <SwitchPreference
            android:key="android_debug_root"
            android:defaultValue="false"
            android:title="@string/adb_state_root_state" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="tasker_pref"
        android:title="@string/tasker" >
        <Preference
            android:key="tasker"
            android:summary="@string/tasker_summary"
            android:icon="@drawable/tasker"
            android:persistent="false" />
    </PreferenceCategory>
</PreferenceScreen>
